--- a/FullCart/FullCart.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/FullCart/FullCart.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,9 +1,9 @@
-<header>
+<header *ngIf="!isLoggedIn()">
   <nav
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">FullCart.Web</a>
+      <a class="navbar-brand" [routerLink]="['/']">Full Cart</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -25,16 +25,11 @@
             [routerLinkActive]="['link-active']"
             [routerLinkActiveOptions]="{ exact: true }"
           >
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
+            <a class="nav-link text-dark" [routerLink]="['/login']">Login</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/counter']"
-              >Counter</a
-            >
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-              >Fetch data</a
+              >Register</a
             >
           </li>
         </ul>
@@ -42,3 +37,5 @@
     </div>
   </nav>
 </header>
+
+<app-admin-nav *ngIf="isLoggedIn()"></app-admin-nav>
